[package]
name = "tgm4-replay-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = "0.3.2"
serde = {version = "1.0.219", features = ["derive"]}
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support Linux (and CI)
    "x11",
] }
log = "0.4"
egui_extras = "0.30"
chrono = {version = "0.4.40", features = ["serde"]}
ureq = {version = "3.0", features = ["json"]}
cookie_store = "0.21.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

